--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   </head>
   <body data-theme="dark">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
